Fix unit test failure on GitHub Actions