@@ -99,6 +99,7 @@
                 <configuration>
                     <argLine>
                         --add-opens com.lottie4j.fxfileviewer/com.lottie4j.fxfileviewer=ALL-UNNAMED
+                        --add-opens com.lottie4j.fxfileviewer/com.lottie4j.fxfileviewer.util=ALL-UNNAMED
                         ${surefire.argLine.headless}
                     </argLine>
                 </configuration>
